fixes .pm-form styles on firefox

--- a/src/frontend/styles/pm/index.css
+++ b/src/frontend/styles/pm/index.css
@@ -48,13 +48,12 @@
     overflow: hidden;
     padding: 5px;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
 }
 .pm-form__input {
     height: 90px;
     max-height: 90px;
-    width: 100%;
-    max-width: 100%;
-    display: block;
 }
 
 .pm-panel {
